--- a/addressbook/addressbook.vcxproj.filters
+++ b/addressbook/addressbook.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="pch.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Information.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -26,5 +29,16 @@
     <ClCompile Include="addressbook.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Information.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="1.txt">
+      <Filter>源文件</Filter>
+    </Text>
+    <Text Include="2.txt">
+      <Filter>源文件</Filter>
+    </Text>
   </ItemGroup>
 </Project>
